--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.status {
+  position: absolute;
+  top: 0px;
+  border: 1px solid #999900;
+  background: #ffffcc;
+}
